...
    "live_activity.finished" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finished"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Завершено"
...
    "live_activity.focus_finished" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Focus finished"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Фокус завершено"
...
    "live_activity.stay_focused" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stay focused"
          }
        },
        "uk" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Зберігайте фокус"
...
